6 / 10 content -> contact로 변경 연락처 리스트뷰로 출력

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
             android:name=".FindIDPW"
             android:exported="false" />
         <activity
-            android:name=".ContentAdd"
+            android:name=".ContactAdd"
             android:exported="false" />
         <activity
             android:name=".MyInfo"
             android:exported="false" />
         <activity
-            android:name=".MainContent"
+            android:name=".MainContact"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
