6 / 11 자잘한 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".ContactInfo"
             android:exported="false" />
         <activity
-            android:name=".FindIDPW"
+            android:name=".FindPW"
             android:exported="false" />
         <activity
             android:name=".ContactAdd"
